Release 0.12 (not yet released)

Release 0.11 (2025-06-08)

* Major incompatible change

  A children parameter has been added to the lambda list of the generic
  function ECLECTOR.PARSE-RESULT:MAKE-SKIPPED-INPUT-RESULT so that results
  which represent skipped material can have children. For example, before this
  change, a ECLECTOR.PARSE-RESULT:READ call which encountered the expression
  #+no-such-feature foo bar potentially constructed parse results for all
  (recursive) READ calls, that is for the whole expression, for
  no-such-feature, for foo and for bar, but the parse results for
  no-such-feature and foo could not be attached to a parent parse result and
  were thus lost. In other words the shape of the parse result tree was

    skipped input result #+no-such-feature foo
    expression result    bar

  With this change, the parse results in question can be attached to the parse
  result which represents the whole #+no-such-feature foo expression so that
  the entire parse result tree has the following shape

    skipped input result #+no-such-feature foo
      skipped input result no-such-feature
      skipped input result foo
    expression result    bar

  Since this is a major incompatible change, we offer the following workaround
  for clients that must support Eclector versions with and without this change:

    (eval-when (:compile-toplevel :load-toplevel :execute)
      (let* ((generic-function #'eclector.parse-result:make-skipped-input-result)
             (lambda-list      (c2mop:generic-function-lambda-list
                                generic-function)))
        (when (= (length lambda-list) 5)
          (pushnew 'skipped-input-children *features*))))
    (defmethod eclector.parse-result:make-skipped-input-result
        ((client client)
         (stream t)
         (reason t)
         #+PACKAGE-THIS-CODE-IS-READ-IN::skipped-input-children (children t)
         (source t))
      ...