@@ -100,8 +100,6 @@
    #:find-character
    #:make-structure-instance
 
-   #:call-with-current-package
-
    #:evaluate-expression
    #:check-feature-expression
    #:evaluate-feature-expression)
