@@ -1,5 +1,9 @@
 Release 0.12 (not yet released)
 
+* The deprecated generic functions ECLECTOR.READER:CALL-WITH-CURRENT-PACKAGE
+  has been removed. Clients should use ECLECTOR.BASE:CALL-WITH-STATE-VALUE with
+  the CL:*PACKAGE* aspect.
+
 Release 0.11 (2025-06-08)
 
 * Major incompatible change
